Add new files to Patricia

--- a/HTML_LEVEL_ONE_assessment.html
+++ b/HTML_LEVEL_ONE_assessment.html
@@ -5,25 +5,30 @@
     <title> HTML LEVEL ONE </title>
   </head>
   <body>
+    <div class="overlay">
+      <div class="header">
+          <div id="header-text">
     <h1> Welcome to my Website! </h1>
     <p> I am excited to eventually learn Django! </p>
     <p> <a href='https://www.djangoproject.com/' > Here is a link to the official Django Website </a> </p>
     <p> Here is a picture of the Python Logo: </p>
-    <img src='Images\python.png' alt='Missing python.png image'>
+    <img src='python.png' alt='Missing python.png image'>
     <p> Here are the reasons Django is cool. </p>
     <ol>
       <li>Ridiculously Fast</li>
       <li>Reaasuringly Secure</li>
       <li>Exceedingly Scalable</li>
     </ol>
-
+    </div>
+      </div>
+        </div>
     <h2>Bonus: Optional Extra Credit </h2>
     <p>Can you figure out how to make a picture a link?</p>
-
+<br>
     <a href="https://www.djangoproject.com/">
-      <img src='Images\django.png' alt='Missing django.png image' >
+      <img src='django.png' alt='Missing django.png image' >
       </a>
-
+<br>
     <p> I just created a new branch for testing</p>
 
   </body>
