--- a/basic.html
+++ b/basic.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Kay's Birthday Party</title>
+  <title>Neha's Birthday Party</title>
 </head>
 <body>
   <h1 style="font-size: 72px">Kay's Birthday Party</h1>
